src/scss/style.scss
/* ... */
.doc-card {
    box-shadow: 0px 0px 22px 2px rgba(202, 202, 202, 0.4);
    -webkit-box-shadow: 0px 0px 22px 2px rgba(202, 202, 202, 0.4);
    -moz-box-shadow: 0px 0px 22px 2px rgba(202, 202, 202, 0.4);

    width: 380px;
    height: 170px;
    background-color: #fff;
    border-radius: 5px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    @media (max-width: 900px) {
        width: 350px;
    }
    @media (max-width: 400px) {
        width: 300px;
        max-height: 185px;
    }
    &__photo {
        border-radius: 0 50% 50% 50%;
        width: 100px;
        height: 100px;
        position: absolute;
        top: -20px;
        left: -20px;
        @media (max-width: 400px) {
            width: 80px;
            height: 80px;
            top: -10px;
            left: -10px;
        }
    }
    &__text {
        padding-left: 80px;
    }
    &__name {
        font-size: 22px;
        margin-bottom: 10px;
        @media (max-width: 400px) {
            font-size: 20px;
        }
    }

    &__job {
        font-size: 20px;
        @media (max-width: 400px) {
            font-size: 18px;
        }
    }

    &__stats {
        display: flex;
        white-space: nowrap;
        &-wrap {
            &::before {
                content: "";
                display: block;
                height: 1px;
                width: 70%;
                background-color: #d9d9d9b3;
                margin: 0 auto;
                margin-bottom: 20px;
                margin-top: 15px;
            }
        }
    }

    &__rating {
        font-size: 16px;
        > svg {
            margin-bottom: -5px;
            margin-right: 5px;
        }
        margin-right: 40px;
    }

    &__experience {
        font-size: 16px;
        > svg {
            margin-bottom: -5px;
            margin-right: 5px;
        }
    }
    display: none;
    &._visible {
        display: block;
    }
}

.testimonials {
    margin-top: -400px;
    &__wrapper {
        background: url("../images/bg3.svg");
        background-repeat: no-repeat;
        background-position: top right;
        position: relative;
    }
    &__title {
        position: absolute;
        top: 350px;
        right: 100px;
        padding-right: 20px;
        @media (max-width: 1400px) {
            top: -20px;
            left: 50%;
            padding-right: 0;
            margin-left: -100px;
        }
        @media (max-width: 400px) {
            width: 100%;
            margin: 0 0 0 0;
            position: static;
            text-align: center;
        }
    }

    &__slider {
    }
}
.testimonial {
    border-radius: 0% 30% 30% 30%;
    background-color: #fff;
    padding: 65px 65px 35px 20px;
    box-shadow: 0px 0px 12px 2px rgba(202, 202, 202, 0.4);
    -webkit-box-shadow: 0px 0px 12px 2px rgba(202, 202, 202, 0.4);
    -moz-box-shadow: 0px 0px 12px 2px rgba(202, 202, 202, 0.4);
    width: 450px;
    height: 350px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    @media (max-width: 570px) {
        width: 400px;
    }
    @media (max-width: 430px) {
        width: 360px;
    }
    @media (max-width: 390px) {
        width: 320px;
    }
    @media (max-width: 330px) {
        width: 300px;
        padding: 65px 65px 15px 25px;
    }
    &__text {
        font-size: 20px;
    }

    &__stars {
    }

    &__user {
    }

    &__name {
        text-align: right;
        padding-right: 100px;
        font-size: 22px;
        font-weight: 500;
    }

    &__avatar {
        border-radius: 50% 50% 0% 50%;
        border: 2px solid rgb(193, 193, 193);
        width: 100px;
        height: 100px;
        position: absolute;
        bottom: 0;
        right: 15px;
    }
}

.appointment {
    margin: 0 auto;
    width: 100%;
    max-width: 1000px;
    margin-top: 230px;
    margin-bottom: 150px;
    border-radius: 20px;
    background-color: transparent;
    border: 2px solid #03a9f4;
    display: flex;
    justify-content: space-between;
    padding: 30px;
    @media (max-width: 900px) {
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding: 20px;
        margin-bottom: 50px;
    }
    @media (max-width: 500px) {
        margin-bottom: 35px;
        text-align: left;
    }
    &__title {
        font-size: 28px;
        font-weight: 500;
        margin-bottom: 10px;
        @media (max-width: 600px) {
            font-size: 24px;
        }
    }
    &__subtitle {
        font-size: 20px;
    }
    &__link {
        margin-left: 20px;
        border-radius: 40px;
        padding: 20px 40px;
        color: #fff;
        text-transform: uppercase;
        font-size: 22px;
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: 500;
        transition: all 0.3s ease 0s;
        &:hover {
            background-color: #0077aa;
        }
        @media (max-width: 900px) {
            margin-top: 30px;
            margin-left: 0;
        }
    }
}
/* ... */

